--- a/style.css
+++ b/style.css
@@ -1,16 +1,58 @@
+@font-face {
+  font-family: 'Brygada1918';
+  src: local('Brygada1918'),
+    url('./src/assets/fonts/Brygada1918/Brygada1918-VariableFont_wght.ttf');
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Brygada1918';
+  src: local('Brygada1918'),
+    url('./src/assets/fonts/Brygada1918/Brygada1918-Italic-VariableFont_wght.ttf');
+  font-style: italic;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --black: #292929;
+  --light-gray: hsl(0, 0%, 92%);
+  --white: hsl(0, 0%, 100%);
+  --motion-blur: blur(0);
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--white);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  font-family: Brygada1918, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  line-height: 1.65;
+  color: var(--black);
+  font-style: italic;
+  margin: 0;
+  background-color: var(--white);
+  overflow: hidden;
+  height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 900;
+  margin: 0;
+  font-style: normal;
+  font-variant-ligatures: no-common-ligatures;
 }
 
 a {
@@ -22,12 +64,28 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+#app {
+  position: relative;
+}
+
+section {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  position: fixed;
+  visibility: hidden;
+  will-change: transform;
+  &:first-of-type {
+    visibility: visible;
+  }
+
+  .outer,
+  .inner {
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+    will-change: transform;
+  }
 }
 
 h1 {
@@ -35,62 +93,220 @@ h1 {
   line-height: 1.1;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.logo {
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 17px;
+  padding-bottom: 17px;
+}
+
+.page,
+.inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.page--1 {
+  height: calc(100vh - 53px);
+}
+
+.hero-heading {
+  font-size: 170px;
+  font-weight: 900;
+  line-height: 1.5;
+  color: var(--black);
+  column-gap: 30px;
+  align-items: flex-end;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin-bottom: 66px;
+}
+
+.revolving-content__container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 474px;
+  height: 255px;
+  flex-direction: column;
+  row-gap: 61px;
+  transform: translateY(150%);
+  --motion-blur: 8.2px;
+  filter: blur(var(--motion-blur));
+}
+
+.revolving-text__wrapper {
+  display: block;
+  overflow: hidden;
+}
+
+.revolving-text {
+  transform: translateY(150%);
+  display: block;
+}
+
+.revolving-content__item {
+  margin-top: 10px;
+}
+
+.revolving-text__better {
+  --motion-blur: 8.2px;
+  transform: translateY(150%);
+  filter: blur(var(--motion-blur));
+}
+
+.revolving-text__for,
+.revolving-text__less {
+  line-height: 1;
+  --motion-blur: 8.2px;
+  filter: blur(var(--motion-blur));
+}
+
+.revolving-content__video {
+  display: block;
+  width: 474px;
+  height: 243px;
+
+  video {
+    border-radius: 7px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.body-content {
+  max-width: 378px;
+
+  p {
+    margin: 0;
+  }
+}
+
+.body-content__wrapper {
+  height: 90px;
+  overflow: hidden;
+}
+
+.body-content--page-1 {
+  --motion-blur: 8.2px;
+  filter: blur(var(--motion-blur));
+  transform: translateY(150%);
+
+  p {
+    font-style: italic;
+  }
+}
+
+.page--2 {
+  visibility: hidden;
+}
+
+.outer--page-2 {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: auto;
+  height: 100vh;
+  border-radius: 7px;
+}
+
+.page-2__text-content {
+  position: absolute;
+  inset: 0;
+  width: 436px;
+  height: 215px;
+  z-index: 2;
+  margin: auto;
+}
+
+h2 {
+  font-size: 57.3px;
+  line-height: 1.3;
+}
+
+.page-2__heading-container {
+  width: 436px;
+  margin-bottom: 11px;
+}
+
+.body-content--page-2 {
+  width: 436px;
+}
+
+.white-box {
+  border-radius: 4px;
+  background-color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.page-3__text-content {
+  position: absolute;
+  inset: 0;
+  width: 491px;
+  height: 165px;
+  z-index: 2;
+  margin: auto;
 }
 
-.card {
-  padding: 2em;
-}
+.body-content--page-3 {
+  width: 100%;
+  display: flex;
+  justify-content: stretch;
+  align-items: center;
+  row-gap: 7px;
+  flex-wrap: wrap;
 
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  p {
+    margin: 0;
   }
-  a:hover {
-    color: #747bff;
+
+  .white-box {
+    white-space: nowrap;
+    width: 100%;
   }
-  button {
-    background-color: #f9f9f9;
+  .white-box--2 {
+    padding-left: 29px;
+    padding-right: 29px;
   }
+  .white-box--3 {
+  }
+  .white-box--4 {
+    padding-left: 32.5px;
+    padding-right: 32.5px;
+  }
+}
+
+.body-content__line-1,
+.body-content__line-2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  column-gap: 7px;
 }
