--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ h1 {
 .logo {
 }
 
+body:not([data-active-page='page-1']) .logo {
+  filter: invert(1);
+}
+
 .header {
   position: absolute;
   top: 0;
@@ -106,6 +110,7 @@ h1 {
   align-items: center;
   padding-top: 17px;
   padding-bottom: 17px;
+  z-index: 5;
 }
 
 .page,
@@ -119,6 +124,7 @@ h1 {
 
 .page--1 {
   height: calc(100vh - 53px);
+  transform-origin: top right;
 }
 
 .hero-heading {
@@ -134,6 +140,7 @@ h1 {
   flex-wrap: wrap;
   width: 80%;
   margin-bottom: 66px;
+  max-width: 1200px;
 }
 
 .revolving-content__container {
@@ -229,9 +236,10 @@ h1 {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: auto;
-  height: 100vh;
-  border-radius: 7px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(1.1);
 }
 
 .page-2__text-content {
@@ -251,10 +259,20 @@ h2 {
 .page-2__heading-container {
   width: 436px;
   margin-bottom: 11px;
+  transform: translateY(150%);
+}
+
+.page-2__heading-wrapper {
+  overflow: hidden;
 }
 
 .body-content--page-2 {
   width: 436px;
+  transform: translateY(-150%);
+}
+
+.page-2__body-content-wrapper {
+  overflow: hidden;
 }
 
 .white-box {
@@ -275,6 +293,15 @@ h2 {
   margin: auto;
 }
 
+.page-3__heading-wrapper {
+  overflow: hidden;
+  margin-bottom: 7px;
+}
+
+.page-3__heading-container {
+  transform: translateY(150%);
+}
+
 .body-content--page-3 {
   width: 100%;
   display: flex;
@@ -290,16 +317,19 @@ h2 {
   .white-box {
     white-space: nowrap;
     width: 100%;
+    text-align: center;
+  }
+  .white-box--1 {
+    width: 206px;
   }
   .white-box--2 {
-    padding-left: 29px;
-    padding-right: 29px;
+    width: 278px;
   }
   .white-box--3 {
+    width: 135px;
   }
   .white-box--4 {
-    padding-left: 32.5px;
-    padding-right: 32.5px;
+    width: 349px;
   }
 }
 
@@ -307,6 +337,48 @@ h2 {
 .body-content__line-2 {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   column-gap: 7px;
+}
+
+.page-3-text-1-wrapper {
+  width: 206px;
+}
+
+.page-3-text-2-wrapper {
+  width: 278px;
+}
+
+.page-3-text-3-wrapper {
+  width: 135px;
+}
+
+.page-3-text-4-wrapper {
+  width: 349px;
+}
+
+.page--3 {
+  transform: translateY(100%);
+  z-index: 2;
+}
+
+.page-3-text-wrapper {
+  overflow: hidden;
+
+  p {
+    transform: translateY(-150%);
+  }
+}
+
+.page--4 {
+  visibility: hidden;
+  z-index: 1;
+}
+
+.page-4__heading-wrapper {
+  overflow: hidden;
+}
+.page-4__heading-container {
+  transform: translateY(150%);
+  width: 430px;
 }
